--- a/css/thelabcast.css
+++ b/css/thelabcast.css
@@ -1,3 +1,55 @@
 /*
  * The Labcast
  */
+
+html {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+body {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+/*
+ * Headers
+ * -------
+ */
+
+header#hero-spot {
+  background-image: url("../img/tiny_grid.png");
+  background-repeat: repeat;
+  width: 100%;
+  height: 180px;
+  text-align: center;
+  display: block;
+  overflow: auto;
+}
+
+header#hero-spot h1 {
+  background-image: url("../img/thelabcast.png");
+  background-repeat: no-repeat;
+  width: 415px;
+  height: 81px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25px;
+  text-indent: -10000px;
+}
+
+header#hero-spot h2 {
+  font-size: 24px;
+}
+
+/*
+ * Subscribe
+ * ---------
+ */
+section#subscribe {
+  width: 100%;
+  height: 80px;
+  background-color: #222;
+  text-align: center;
+}
+
