--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,12 +8,9 @@ layout: base
   </div>
 </header>
 <section id="subscribe">
-  <img src="/img/subscribe-itunes.png" height="50" width="122" style="margin-top: 14px" />
+  <img src="/img/subscribe-itunes.png" height="56" width="131" style="margin-top: 11px; margin-right: 40px;" />
+  <img src="/img/subscribe-rss.png" height="56" width="131" style="margin-top: 11px" />
 </section>
 <section id="content">
-</section>
-
-
-
-<h1>Index</h1>
 {{content}}
+</section>
